--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     <section id="projects" class="py-20 bg-gray-100">
         <div class="max-w-7xl mx-auto px-4">
             <div class="fade-in">
-                <h2 class="text-4xl font-bold text-center mb-16 text-gray-800">Featured Projects</h2>
+                <h2 class="text-4xl font-bold text-center mb-16 text-gray-800">Projects</h2>
                 <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Project 1 - Resume Builder -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover border-2 border-green-400">
