--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </div>
                             <div>
                                 <h1 class="text-2xl font-bold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Kagiso Monene</h1>
-                                <p class="text-xs text-gray-500 font-medium">Software developer</p>
+                                <p class="text-xs text-gray-500 font-medium">Software Developer</p>
                             </div>
                         </div>
                     </div>
