--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     
                     <!-- CTA Button -->
                     <div class="ml-4 pl-4 border-l border-gray-200">
-                        <a href="#contact" class="bg-gradient-to-r from-primary to-secondary text-white px-6 py-2.5 rounded-xl font-semibold hover:shadow-lg hover:scale-105 transition-all duration-300 flex items-center space-x-2">
-                            <span>Hire Me</span>
+                        <a href="#Resume" class="bg-gradient-to-r from-primary to-secondary text-white px-6 py-2.5 rounded-xl font-semibold hover:shadow-lg hover:scale-105 transition-all duration-300 flex items-center space-x-2">
+                            <span>View Resume</span>
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
                             </svg>
@@ -151,8 +151,8 @@
                     📧 Contact
                 </a>
                 <div class="pt-4 border-t border-white/20">
-                    <a href="#contact" class="block bg-gradient-to-r from-blue-600 to-purple-600 text-white px-6 py-3 rounded-xl font-semibold text-center hover:shadow-lg transition-all duration-300 backdrop-blur-sm">
-                        Hire Me
+                    <a href="#Resume" class="block bg-gradient-to-r from-blue-600 to-purple-600 text-white px-6 py-3 rounded-xl font-semibold text-center hover:shadow-lg transition-all duration-300 backdrop-blur-sm">
+                        View Resume
                     </a>
                 </div>
             </div>
@@ -497,43 +497,7 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
-
-                    <!-- Project 4 - Capstone -->
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover border-2 border-yellow-400">
-                        <div class="h-48 bg-gradient-to-br from-purple-500 to-pink-600 flex items-center justify-center relative p-4">
-                            <div class="absolute top-2 right-2 bg-blue-400 text-white px-3 py-1 rounded-full text-sm font-bold">
-                                Capstone
-                            </div>
-                            <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400&h=300&fit=crop&auto=format" 
-                                 alt="AI Recommendation Engine with Neural Networks" 
-                                 class="w-full h-full object-cover rounded-lg shadow-lg"
-                                 onerror="this.src=''; this.alt='AI-Powered Recommendation Engine - End-to-end system with real-time personalization'; this.className='w-32 h-32 bg-white bg-opacity-20 rounded-lg flex items-center justify-center text-white text-center p-4 text-sm font-medium';">
-                        </div>
-                        <div class="p-6">
-                            <h3 class="text-xl font-bold mb-3 text-gray-800">AI-Powered Recommendation Engine</h3>
-                            <p class="text-gray-600 mb-4">
-                                End-to-end recommendation system using collaborative filtering and deep learning. 
-                                Handles 1M+ users with real-time personalization.
-                            </p>
-                            <div class="flex flex-wrap gap-2 mb-4">
-                                <span class="px-3 py-1 bg-indigo-100 text-indigo-800 rounded-full text-sm">PyTorch</span>
-                                <span class="px-3 py-1 bg-orange-100 text-orange-800 rounded-full text-sm">AWS</span>
-                                <span class="px-3 py-1 bg-gray-100 text-gray-800 rounded-full text-sm">Docker</span>
-                            </div>
-                            <div class="flex gap-3">
-                                <button onclick="openCapstoneDemo()" class="flex-1 bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors font-semibold">
-                                    Showcase Demo
-                                </button>
-                                <button onclick="openGithub('capstone')" class="flex-1 border border-primary text-primary py-2 px-4 rounded-lg hover:bg-primary hover:text-white transition-colors">
-                                    GitHub
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    </div>      
     </section>
 
      <!-- Certificates Section -->
@@ -979,6 +943,24 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Resume Download -->
+    <section id="Resume" class="py-20 px-4 max-w-4xl mx-auto text-center bg-gradient-to-br from-gray-50 to-blue-50">
+        <div class="fade-in">
+            <h2 class="text-4xl font-bold mb-4 bg-gradient-to-r from-pink-500 to-purple-600 bg-clip-text text-transparent">My Resume</h2>
+            <p class="text-lg text-gray-600 mb-8">
+                Take a closer look at my professional experience, skills, and qualifications.
+            </p>
+            <a href="docs/Kagiso_Monene CV .pdf" download class="inline-block px-8 py-3 rounded-full font-bold text-white bg-gradient-to-r from-pink-500 to-purple-600 hover:from-pink-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-2xl relative overflow-hidden group">
+                <!-- Glowing border effect -->
+                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-pink-400 to-purple-500 opacity-75 blur-sm group-hover:blur-md transition-all duration-300"></div>
+                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-pink-500 to-purple-600 opacity-50 animate-pulse"></div>
+                <span class="relative z-10">View My Resume</span>
+                <!-- Animated shine effect -->
+                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-transparent via-white to-transparent opacity-0 group-hover:opacity-20 transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-all duration-700"></div>
+            </a>
         </div>
     </section>
 
