--- a/index.html
+++ b/index.html
@@ -945,27 +945,7 @@
             </div>
         </div>
     </section>
-
-    <!-- Resume Download -->
-    <section id="Resume" class="py-20 px-4 max-w-4xl mx-auto text-center bg-gradient-to-br from-gray-50 to-blue-50">
-        <div class="fade-in">
-            <h2 class="text-4xl font-bold mb-4 bg-gradient-to-r from-pink-500 to-purple-600 bg-clip-text text-transparent">My Resume</h2>
-            <p class="text-lg text-gray-600 mb-8">
-                Take a closer look at my professional experience, skills, and qualifications.
-            </p>
-            <a href="docs/Kagiso_Monene CV .pdf" download class="inline-block px-8 py-3 rounded-full font-bold text-white bg-gradient-to-r from-pink-500 to-purple-600 hover:from-pink-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-2xl relative overflow-hidden group">
-                <!-- Glowing border effect -->
-                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-pink-400 to-purple-500 opacity-75 blur-sm group-hover:blur-md transition-all duration-300"></div>
-                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-pink-500 to-purple-600 opacity-50 animate-pulse"></div>
-                <span class="relative z-10">View My Resume</span>
-                <!-- Animated shine effect -->
-                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-transparent via-white to-transparent opacity-0 group-hover:opacity-20 transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-all duration-700"></div>
-            </a>
-        </div>
-    </section>
-
-
-
+                    
     <!-- Skills Section -->
     <section id="skills" class="py-20 bg-white">
         <div class="max-w-6xl mx-auto px-4">
@@ -1084,7 +1064,7 @@
                             <path d="M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H19M18.5,18.5V13.2A3.26,3.26 0 0,0 15.24,9.94C14.39,9.94 13.4,10.46 12.92,11.24V10.13H10.13V18.5H12.92V13.57C12.92,12.8 13.54,12.17 14.31,12.17A1.4,1.4 0 0,1 15.71,13.57V18.5H18.5M6.88,8.56A1.68,1.68 0 0,0 8.56,6.88C8.56,5.95 7.81,5.19 6.88,5.19A1.69,1.69 0 0,0 5.19,6.88C5.19,7.81 5.95,8.56 6.88,8.56M8.27,18.5V10.13H5.5V18.5H8.27Z"/>
                         </svg>
                         <h3 class="text-center text-lg font-semibold mb-2">LinkedIn</h3>
-                        <p>linkedin.com/in/kagiso-monene/</p>
+                        <p class="text-center">Kagiso Monene</p>
                     </a>
                     
                     <a href="https://github.com/kagisogotech" target="_blank" class="bg-white bg-opacity-20 backdrop-blur-lg rounded-xl p-6 hover:bg-opacity-30 transition-all card-hover">
@@ -1096,6 +1076,24 @@
                     </a>
                 </div>
 </section>
+
+            <!-- Resume Download -->
+    <section id="Resume" class="py-20 px-4 max-w-4xl mx-auto text-center bg-gradient-to-br from-gray-50 to-blue-50">
+        <div class="fade-in">
+            <h2 class="text-4xl font-bold mb-4 bg-gradient-to-r from-pink-500 to-purple-600 bg-clip-text text-transparent">My Resume</h2>
+            <p class="text-lg text-gray-600 mb-8">
+                Take a closer look at my professional experience, skills, and qualifications.
+            </p>
+            <a href="docs/Kagiso_Monene CV .pdf" download class="inline-block px-8 py-3 rounded-full font-bold text-white bg-gradient-to-r from-pink-500 to-purple-600 hover:from-pink-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-2xl relative overflow-hidden group">
+                <!-- Glowing border effect -->
+                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-pink-400 to-purple-500 opacity-75 blur-sm group-hover:blur-md transition-all duration-300"></div>
+                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-pink-500 to-purple-600 opacity-50 animate-pulse"></div>
+                <span class="relative z-10">View My Resume</span>
+                <!-- Animated shine effect -->
+                <div class="absolute inset-0 rounded-full bg-gradient-to-r from-transparent via-white to-transparent opacity-0 group-hover:opacity-20 transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-all duration-700"></div>
+            </a>
+        </div>
+    </section>
      <!-- Mini Chatbot -->
     <div id="chatbot-container" class="fixed bottom-6 right-6 z-50">
         <!-- Chat Toggle Button -->
