--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <span class="relative z-10 font-medium">Skills</span>
                         <div class="absolute inset-0 bg-white/20 backdrop-blur-sm rounded-xl opacity-0 group-hover:opacity-100 transition-all duration-300 border border-white/30"></div>
                     </a>
-                    <a href="#contact" class="nav-link relative px-4 py-2 text-blue hover:text-blue-200 transition-all duration-300 rounded-xl group">
+                    <a href="#contacts" class="nav-link relative px-4 py-2 text-blue hover:text-blue-200 transition-all duration-300 rounded-xl group">
                         <span class="relative z-10 font-medium">Contact</span>
                         <div class="absolute inset-0 bg-white/20 backdrop-blur-sm rounded-xl opacity-0 group-hover:opacity-100 transition-all duration-300 border border-white/30"></div>
                     </a>
@@ -147,7 +147,7 @@
                 <a href="#skills" class="block px-4 py-3 text-white hover:text-blue-200 hover:bg-white/20 rounded-xl transition-all duration-300 font-medium backdrop-blur-sm border border-white/10">
                     ⚡ Skills
                 </a>
-                <a href="#contact" class="block px-4 py-3 text-white hover:text-blue-200 hover:bg-white/20 rounded-xl transition-all duration-300 font-medium backdrop-blur-sm border border-white/10">
+                <a href="#contacts" class="block px-4 py-3 text-white hover:text-blue-200 hover:bg-white/20 rounded-xl transition-all duration-300 font-medium backdrop-blur-sm border border-white/10">
                     📧 Contact
                 </a>
                 <div class="pt-4 border-t border-white/20">
