--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <a href="#projects" class="bg-gradient-to-r from-blue-600 to-purple-600 text-white px-8 py-4 rounded-xl font-semibold hover:from-blue-700 hover:to-purple-700 transition-all duration-300 pulse-glow transform hover:scale-105">
                         View My Work
                     </a>
-                    <a href="#contact" class="border-2 border-cyan-300 text-cyan-300 px-8 py-4 rounded-xl font-semibold hover:bg-cyan-300 hover:text-slate-900 transition-all duration-300 backdrop-blur-sm bg-white/10">
+                    <a href="#contacts" class="border-2 border-cyan-300 text-cyan-300 px-8 py-4 rounded-xl font-semibold hover:bg-cyan-300 hover:text-slate-900 transition-all duration-300 backdrop-blur-sm bg-white/10">
                         Get In Touch
                     </a>
                 </div>
